--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,4 +1,5 @@
 {
+   "manifest_version": 2,
    "chrome_url_overrides": {
       "newtab": "newtab.html"
    },
@@ -10,9 +11,11 @@
    "name": "Favilicous",
    "permissions": ["bookmarks", "chrome://favicon/", "tabs", "contextMenus"],
    "default_locale": "en",
-   "background_page": "background.html",
+   "background": {
+      "page": "background.html"
+   },
    "incognito": "split",
-   "minimum_chrome_version": "14.0.825.0",
-   "version": "0.1",
+   "minimum_chrome_version": "18",
+   "version": "0.2",
    "update_url": "http://sumpfhupe.zxq.net/favilicous/updates.xml"
 }
