--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,14 +1,16 @@
 {
+   "name": "Favilicous",
+   "version": "0.2",
    "manifest_version": 2,
    "chrome_url_overrides": {
       "newtab": "newtab.html"
    },
+   "web_accessible_resources": [ "newtab.html" ],
    "icons": {
       "128": "images/icon128.png",
       "16": "images/icon16.png",
       "48": "images/icon48.png"
    },
-   "name": "Favilicous",
    "permissions": ["bookmarks", "chrome://favicon/", "tabs", "contextMenus"],
    "default_locale": "en",
    "background": {
@@ -16,6 +18,6 @@
    },
    "incognito": "split",
    "minimum_chrome_version": "18",
-   "version": "0.2",
-   "update_url": "http://sumpfhupe.zxq.net/favilicous/updates.xml"
+   "update_url": "http://sumpfhupe.zxq.net/favilicous/updates.xml",
+   "offline_enabled": true
 }
