--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
    "name": "Favilicous",
-   "version": "0.2",
+   "version": "0.3",
    "manifest_version": 2,
    "chrome_url_overrides": {
       "newtab": "newtab.html"
@@ -18,6 +18,6 @@
    },
    "incognito": "split",
    "minimum_chrome_version": "18",
-   "update_url": "http://sumpfhupe.zxq.net/favilicous/updates.xml",
+   "update_url": "https://github.com/wummel/favilicous/raw/master/releases/updates.xml",
    "offline_enabled": true
 }
