--- a/src/manifest.json
+++ b/src/manifest.json
@@ -25,6 +25,7 @@
     "contextMenus"
   ],
   "update_url": "https://github.com/wummel/favilicous/raw/master/releases/updates.xml",
+  "homepage_url": "https://github.com/wummel/favilicous/",
   "version": "0.7",
   "web_accessible_resources": [
     "newtab.html"
