--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,23 +13,19 @@
     "16": "images/icon16.png",
     "48": "images/icon48.png"
   },
-  "incognito": "split",
   "manifest_version": 2,
   "minimum_chrome_version": "18",
   "name": "Favilicous",
-  "offline_enabled": true,
   "permissions": [
     "bookmarks",
-    "chrome://favicon/",
     "tabs",
     "contextMenus"
   ],
-  "update_url": "https://github.com/wummel/favilicous/raw/master/releases/updates.xml",
   "homepage_url": "https://github.com/wummel/favilicous/",
   "version": "0.7",
   "web_accessible_resources": [
     "newtab.html"
   ],
   "content_security_policy":
-    "object-src 'none'; script-src chrome://resources 'self'; img-src chrome://favicon/ 'self'"
+    "object-src 'none'; script-src 'self'; img-src 'self'"
 }
