Vesion and gecko id

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,7 +13,7 @@
     "16": "images/icon16.png",
     "48": "images/icon48.png"
   },
-  "description": "Replaces the start page with your bookmarks.",
+  "description": "Displays bookmarks in the new-tab page.",
   "manifest_version": 2,
   "minimum_chrome_version": "18",
   "name": "Favilicous",
@@ -26,6 +26,12 @@
   "web_accessible_resources": [
     "newtab.html"
   ],
+  "applications": {
+    "gecko": {
+      "strict_min_version": "57.0",
+      "id": "reflexionsniveau@web.de"
+    }
+  }
   "content_security_policy":
     "object-src 'none'; script-src 'self'; img-src 'self' https://favicons.githubusercontent.com"
 }
