--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,4 +1,10 @@
 {
+  "applications": {
+    "gecko": {
+      "id": "reflexionsniveau@web.de",
+      "strict_min_version": "57.0"
+    }
+  },
   "background": {
     "scripts": [
       "background.js"
@@ -7,13 +13,15 @@
   "chrome_url_overrides": {
     "newtab": "newtab.html"
   },
+  "content_security_policy": "object-src 'none'; script-src 'self'; img-src 'self' https://favicons.githubusercontent.com",
   "default_locale": "en",
+  "description": "Displays bookmarks in the new-tab page.",
+  "homepage_url": "https://github.com/wummel/favilicous/",
   "icons": {
     "128": "images/icon128.png",
     "16": "images/icon16.png",
     "48": "images/icon48.png"
   },
-  "description": "Displays bookmarks in the new-tab page.",
   "manifest_version": 2,
   "minimum_chrome_version": "18",
   "name": "Favilicous",
@@ -21,17 +29,8 @@
     "bookmarks",
     "tabs"
   ],
-  "homepage_url": "https://github.com/wummel/favilicous/",
-  "version": "0.9",
+  "version": "0.10",
   "web_accessible_resources": [
     "newtab.html"
-  ],
-  "applications": {
-    "gecko": {
-      "strict_min_version": "57.0",
-      "id": "reflexionsniveau@web.de"
-    }
-  },
-  "content_security_policy":
-    "object-src 'none'; script-src 'self'; img-src 'self' https://favicons.githubusercontent.com"
+  ]
 }
