--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "favilicous",
     "version": "0.0.0",
     "description": "only deps",
-    "license": "SEE LICENSE IN LICENSE.txt",
+    "license": "all rights reserved",
     "private": true,
     "devDependencies": {
         "web-ext": "3.0.0",
