--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "license": "all rights reserved",
     "private": true,
     "devDependencies": {
-        "eslint": "6.6.0",
-        "web-ext": "^3.1.1"
+        "eslint": "7.3.1",
+        "web-ext": "4.3.0"
     }
 }
