--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "favilicous",
+    "name": "favilicous2",
     "version": "0.0.0",
     "description": "only deps",
     "license": "all rights reserved",
